--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
     <head>
         <meta charset="utf-8">
         <title>index.html</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Odin-recipes</h1>
             <p>
                 <ul>
-                    <li><a href="recipes/frenchtoast.html">Frenchtoast</a></li>
-                    <li><a href="recipes/lasagna.html">Lasagna</a></li>
-                    <li><a href="recipes/tacos.html">Tacos</a></li>
+                    <li><a href="frenchtoast.html">French Toast</a></li>
+                    <li><a href="lasagna.html">Lasagna</a></li>
+                    <li><a href="tacos.html">Tacos</a></li>
                 </ul>
             </p>
     </body>
